[gd_scene load_steps=7 format=3]

[ext_resource type="Script" path="res://scripts/npcs/unified_npc.gd" id="1"]

[sub_resource type="CapsuleShape3D" id="1"]
radius = 0.5
height = 1.8

[sub_resource type="CapsuleMesh" id="2"]
radius = 0.5
height = 1.8

[sub_resource type="StandardMaterial3D" id="3"]
albedo_color = Color(0.5, 0.5, 0.5, 1)

[sub_resource type="BoxMesh" id="4"]
size = Vector3(0.8, 0.1, 0.8)

[sub_resource type="StandardMaterial3D" id="5"]
albedo_color = Color(0.3, 0.3, 0.3, 1)

[node name="UnifiedNPC" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 1
script = ExtResource("1")
npc_name = "Generic NPC"
role = "Crew Member"

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("1")

[node name="Body" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
mesh = SubResource("2")
material_override = SubResource("3")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, 0)

[node name="HeadMesh" type="MeshInstance3D" parent="Head"]
mesh = SubResource("4")
material_override = SubResource("5")

[node name="NameLabel" type="Label3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
billboard = 1
no_depth_test = true
fixed_size = true
pixel_size = 0.001
text = "NPC Name"
font_size = 14
outline_size = 4

[node name="RoleLabel" type="Label3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0)
billboard = 1
no_depth_test = true
fixed_size = true
pixel_size = 0.001
modulate = Color(0.8, 0.8, 0.8, 1)
text = "Role"
font_size = 12
outline_size = 3